--- a/mhw-builds-wp/builds-console.html
+++ b/mhw-builds-wp/builds-console.html
@@ -1,3 +1,10 @@
+
+<p style="background-color:#f25f70;border-bottom:2px solid rgba(0,0,0,.15);height:10px;"></p>
+<h2>This site is relocating for MH:Rise!</h2>
+<p>Please visit <a href="https://mhchargeblade.net/">mhchargeblade.net</a> to see the current content on this site and  future MH:Rise Charge Blade content! This website will no longer be updated but will remain active until December 2021. Thank you for 2+ years with MHWBuilds.net!</p>
+<h1 class="page-title"><a href="https://mhchargeblade.net/">mhchargeblade.net</a></h1>
+<p style="background-color:#f25f70;border-bottom:2px solid rgba(0,0,0,.15);height:10px;"></p>
+
 <div class="submenu">
 <div class="shaded submenu-1"><a href="/charge-blade">Master Rank</a></div>
 <div class="shaded submenu-3"><a href="/high-rank-charge-blade-builds">High Rank</a></div>
