--- a/mhw-speedthumb/index.html
+++ b/mhw-speedthumb/index.html
@@ -1,221 +1,1 @@
-<head>
-    <title>MHW/MHR Speedrun Thumbnail Generator</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
-    <script src="huebee.pkgd.min.js"></script>
-    <script src="jquery.min.js"></script>
-    <script src="lodash.min.js"></script>
-    <script src="FileSaver.min.js"></script>
-    <script src="dom-to-image.min.js"></script>
-    <script src="main.js"></script>
-    <link href="styles.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Asap:400,500|Heebo:300,400,500|Open+Sans|Barlow+Condensed:300,500,600|Raleway:300,400,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="huebee.css">
-</head>
-<body ng-app="app" ng-controller="MyController as vm" id="">
-    <div class="flexv thing">
-        <div class="header">MHW/MHR Speedrun Thumbnail Generator</div>
-        <div class="spacer"></div>
-        <div class="canvas-outside">
-            <div id="canvas-inside" class="canvas-inside" ng-class="'canvas-inside-' + vm.selectedLayout" ng-style="vm.getBgStyle()">
-                <div class="canvas-spacer" ng-class="'canvas-spacer-' + vm.selectedLayout"></div>
-                <div class="monster-image-container" ng-class="'monster-image-container-' + vm.numMonsters + '-' + vm.selectedLayout">
-                    <img class="monster-image" ng-repeat="i in [0,1,2,3,4]" ng-show="i < vm.numMonsters" ng-src="{{vm.monsters[vm.selectedMonster[i]]}}" ng-class="['monster-image-' + vm.numMonsters + '-' + vm.selectedLayout, {'invisible': !vm.monsters[vm.selectedMonster[i]]}]"></img>
-                </div>
-                <div class="flex1"></div>
-                <div class="info-container" ng-class="['info-container-' + vm.selectedLayout, {'text-shadow': vm.selectedBgType == 3}]">
-                    <div class="flexh">
-                        <div class="flex1"></div>
-                        <div class="mauto flexh" ng-class="['weapon-image-' + vm.selectedLayout, 'weapon-image-' + vm.numWeapons]" ng-repeat="i in [0,1,2,3]" ng-if="i < vm.numWeapons">
-                            <img class="weapon-image" ng-src="{{vm.weapons[vm.selectedWeapon[i]]}}"></img>
-                            <div class="no-space">
-                                <img class="weapon-element-image" ng-show="vm.weaponElements[vm.selectedWeaponElement[i]]" ng-src="{{vm.weaponElements[vm.selectedWeaponElement[i]]}}"></img>
-                            </div>
-                        </div>
-                        <div class="flex1"></div>
-                    </div>
-                    <div class="flexh" ng-class="'text-container-' + vm.selectedLayout">
-                        <div class="timetext mauto" ng-class="vm.fonts[vm.selectedFont]" ng-style="vm.getColorStyle(vm.selectedTimeColorType, vm.timeColor, vm.timeColor2)">{{vm.timeText}}</div>
-                        <div class="mauto flexv category-holder" ng-class="'category-holder-' + vm.selectedLayout">
-                            <div class="tatext" ng-class="vm.fonts[vm.selectedFont]" ng-if="vm.selectedRunCategory > 0" ng-style="vm.getColorStyle(vm.selectedCatColor, vm.catColor, vm.catColor2)">TA</div>
-                            <div ng-if="vm.selectedRunCategory == 2" ng-class="[vm.fonts[vm.selectedFont], vm.clawTextOffset[vm.selectedFont], 'clawtext-' + vm.selectedLayout]" ng-style="vm.getColorStyle(vm.selectedClawColor, vm.clawColor, vm.clawColor2)" class="clawtext">no Claw</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="canvas-spacer" ng-class="'canvas-spacer-' + vm.selectedLayout"></div>
-            </div>
-        </div>
-        <div class="spacer"></div>
-        <div class="mauto"><button ng-click="vm.download()">Generate and download image</button></div>
-        <div class="spacersm"></div>
-        <div class="mauto smallertext">Warning: image download is very buggy. If you encounter problems, please take a screenshot instead.</div>
-        <div class="spacer"></div>
-        <div class="mauto" id="test">
-            <div ng-repeat="i in [0,1,2,3]" ng-show="i < vm.numWeapons">
-                <div class="config-row flexh">
-                    <div>Weapon {{i+1}}</div>
-                    <div class="hspacersm"></div>
-                    <select class="select" ng-model="vm.selectedWeapon[i]">
-                        <option ng-repeat="(key, value) in vm.weapons" value="{{key}}">{{key}}</option>
-                    </select>
-                    <div class="hspacerxsm"></div>
-                    <button ng-click="vm.prev2('selectedWeapon', i, vm.weapons)"><</button>
-                    <div class="hspacerxsm"></div>
-                    <button ng-click="vm.next2('selectedWeapon', i, vm.weapons)">></button>
-                    <div ng-if="i == 0" class="flexh">
-                        <div class="hspacerxsm"></div>
-                        <button ng-click="vm.inc('numWeapons', 4)" ng-disabled="vm.numWeapons == 4">+</button>
-                        <div class="hspacerxsm"></div>
-                        <button ng-click="vm.dec('numWeapons', 1)" ng-disabled="vm.numWeapons == 1">-</button>
-                        <div class="hspacerxsm"></div>
-                        <span class="new">new</span>
-                    </div>
-                </div>
-                <div class="config-row flexh">
-                    <div>Weapon {{i+1}} Element</div>
-                    <div class="hspacersm"></div>
-                    <select class="select" ng-model="vm.selectedWeaponElement[i]">
-                        <option ng-repeat="(key, value) in vm.weaponElements" value="{{key}}">{{key}}</option>
-                    </select>
-                    <div class="hspacerxsm"></div>
-                    <button ng-click="vm.prev2('selectedWeaponElement', i, vm.weaponElements)"><</button>
-                    <div class="hspacerxsm"></div>
-                    <button ng-click="vm.next2('selectedWeaponElement', i, vm.weaponElements)">></button>
-                </div>
-            </div>
-            <div class="config-row flexh" ng-repeat="i in [0,1,2,3,4]" ng-show="i < vm.numMonsters">
-                <div>Monster {{i+1}}</div>
-                <div class="hspacersm"></div>
-                <select class="select" ng-model="vm.selectedMonster[i]">
-                    <option ng-repeat="(key, value) in vm.monsters" ng-disabled="value == -1" value="{{key}}">{{key}}</option>
-                </select>
-                <div class="hspacerxsm"></div>
-                <button ng-click="vm.prev2('selectedMonster', i, vm.monsters)"><</button>
-                <div class="hspacerxsm"></div>
-                <button ng-click="vm.next2('selectedMonster', i, vm.monsters)">></button>
-                <div ng-if="i == 0" class="flexh">
-                    <div class="hspacerxsm"></div>
-                    <button ng-click="vm.inc('numMonsters', 5)" ng-disabled="vm.numMonsters == 5">+</button>
-                    <div class="hspacerxsm"></div>
-                    <button ng-click="vm.dec('numMonsters', 1)" ng-disabled="vm.numMonsters == 1">-</button>
-                    <div class="hspacerxsm"></div>
-                </div>
-            </div>
-            <div class="config-row flexh">
-                <div>Time</div>
-                <div class="hspacersm"></div>
-                <input class="time-input" placeholder="1'23&quot;45" type="text" ng-model="vm.timeText"></input>
-            </div>
-            <div class="config-row flexh">
-                <div>Run category</div>
-                <div class="hspacersm"></div>
-                <select class="select" ng-model="vm.selectedRunCategory">
-                    <option value="0">None</option>
-                    <option value="1">TA</option>
-                    <option value="2">TA No Claw</option>
-                </select>
-            </div>
-            <div class="config-row flexh">
-                <div>Background</div>
-                <div class="hspacersm"></div>
-                <select class="select" ng-model="vm.selectedBgType">
-                    <option value="0">Single</option>
-                    <option value="1">Gradient V.</option>
-                    <option value="2">Gradient H.</option>
-                    <option value="3">Custom upload</option>
-                </select>
-                <div class="hspacerxsm"></div>
-                <input class="bg-color-input" ng-show="vm.selectedBgType <= 2" ng-model="vm.bgColor" data-huebee />
-                <div ng-show="vm.selectedBgType > 0 && vm.selectedBgType <= 2">
-                    <div class="hspacerxsm"></div>
-                    <input class="bg-color-input2" ng-model="vm.bgColor2" data-huebee />
-                </div>
-                <div ng-show="vm.selectedBgType == 3">
-                    <div class="hspacerxsm"></div>
-                    <input type="file" id="file" name="file" value="Upload Image" />
-                </div>
-            </div>
-            <div class="config-row flexh" ng-show="vm.selectedBgType == 3">
-                <select class="select" ng-model="vm.selectedBgFit">
-                    <option value="0">Stretch</option>
-                    <option value="1">Stretch (keep aspect ratio)</option>
-                    <option value="2">Tile</option>
-                </select>
-                <div class="hspacerxsm"></div>
-                <input ng-show="vm.selectedBgFit > 0" type="range" min="0" max="100" value="50" ng-model="vm.bgSlider">
-                <div class="hspacerxsm"></div>
-                <input ng-show="vm.selectedBgFit > 1" type="range" min="0" max="100" value="50" ng-model="vm.bgSlider2">
-            </div>
-            <div class="config-row flexh">
-                <div>Time text color</div>
-                <div class="hspacersm"></div>
-                <select class="select" ng-model="vm.selectedTimeColorType">
-                    <option value="0">Single</option>
-                    <option value="1">Gradient</option>
-                </select>
-                <div class="hspacerxsm"></div>
-                <input class="time-color-input" ng-model="vm.timeColor" data-huebee />
-                <div class="hspacerxsm"></div>
-                <input class="time-color-input2" ng-show="vm.selectedTimeColorType > 0" ng-model="vm.timeColor2" data-huebee />
-            </div>
-            <div class="config-row flexh">
-                <div>Category text color</div>
-                <div class="hspacersm"></div>
-                <select class="select" ng-model="vm.selectedCatColor">
-                    <option value="0">Single</option>
-                    <option value="1">Gradient</option>
-                </select>
-                <div class="hspacerxsm"></div>
-                <input class="cat-color-input" ng-model="vm.catColor" data-huebee />
-                <div class="hspacerxsm"></div>
-                <input class="cat-color-input2" ng-show="vm.selectedCatColor > 0" ng-model="vm.catColor2" data-huebee />
-            </div>
-            <div class="config-row flexh">
-                <div>Claw text color</div>
-                <div class="hspacersm"></div>
-                <input class="claw-color-input" ng-model="vm.clawColor" data-huebee />
-                <div class="hspacerxsm"></div>
-                <input class="claw-color-input2" ng-show="vm.selectedClawColor > 0" ng-model="vm.clawColor2" data-huebee />
-            </div>
-            <div class="config-row flexh">
-                <div>Monster outline color</div>
-                <div class="hspacersm"></div>
-                <select class="select" ng-model="vm.selectedOutlineType" ng-change="vm.outlineChange()">
-                    <option value="0">None</option>
-                    <option value="1">White</option>
-                    <option value="2">Green</option>
-                    <option value="3">Purple</option>
-                    <option value="4">Orange</option>
-                    <option value="5">Custom</option>
-                </select>
-                <div class="hspacerxsm"></div>
-                <input class="outline-color-input" ng-show="vm.selectedOutlineType == 5" ng-model="vm.outlineCustomColor" data-huebee />
-            </div>
-            <div class="config-row flexh">
-                <div>Font</div>
-                <div class="hspacersm"></div>
-                <select class="select" ng-model="vm.selectedFont">
-                    <option ng-repeat="(key, value) in vm.fonts" value="{{key}}">{{key}}</option>
-                </select>
-                <div class="hspacerxsm"></div>
-                <button ng-click="vm.prev('selectedFont', vm.fonts)"><</button>
-                <div class="hspacerxsm"></div>
-                <button ng-click="vm.next('selectedFont', vm.fonts)">></button>
-            </div>
-            <div class="config-row flexh">
-                <div>Layout</div>
-                <div class="hspacersm"></div>
-                <select class="select" ng-model="vm.selectedLayout">
-                    <option ng-repeat="(key, value) in vm.layouts" value="{{key}}">{{value}}</option>
-                </select>
-                <div class="hspacerxsm"></div>
-                <button ng-click="vm.prev('selectedLayout', vm.layouts)"><</button>
-                <div class="hspacerxsm"></div>
-                <button ng-click="vm.next('selectedLayout', vm.layouts)">></button>
-            </div>
-        </div>
-        <div class="spacer"></div>
-        <div class="flex1"></div>
-        <div class="mauto">Problems? Message <a href="https://twitter.com/boardwalkhotel_" target="_blank">@boardwalkhotel_</a></div>
-        <div id="uploaded"></div>
-    </div>
-</body>
+<h1>This tool has moved to <a href="https://mhchargeblade.net/tools/thumbnail-maker/">mhchargeblade.net</a></h1>
