--- a/ak-randomizer/index.html
+++ b/ak-randomizer/index.html
@@ -73,7 +73,7 @@
             <div>
                 <div ng-if="vm.result.operators">
                     <div ng-repeat="operator in vm.result.operators" class="flexh">
-                        <img ng-src="{{operator.avatar}}" class="operator-avatar">
+                        <img ng-src="{{operator.avatar}}.png" class="operator-avatar">
                         <div class="operator-name">{{operator.long_name}}</div>
                     </div>
                 </div>
